--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -60,19 +60,249 @@
 										
 										<div>	
 											<nav>					    
-												<ul>{% for x in pics %}
+												<ul><!--  {% for x in pics %}
 								        				<li><a alt="{{ x.Album_Url }}">
 			
 								        				<img style="width:88%; height:auto; " src="/static/media/{{ x.Photo_Album_Cover }}">
 								        				<p style="color:white;font-size:24px;text-decoration:none;">{{ x.name }}</p>
 								        				
 								        				</a></li>
-								   					{% endfor %}
-								   									
-								   					<li><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>   					
+								   					{% endfor %}-->
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
+								   					<li class="yaHome">	
+									   					<a>							   						
+									   						<nav>
+									   							<ul>													   							
+												   					<li>
+													   					<div class="tablewrapper">
+													   						<table style="direction:ltr; float:left;">
+																				<tr>
+																					<td>
+																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
+																					</td>
+																							
+																					<td>
+																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
+																							<ul>																								
+																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
+																							</ul>
+																						</nav>
+																					</td>
+																						
+																				</tr>
+																			</table>
+																																	
+																		</div>										   					
+													   					
+												   					</li>		
+													   					
+												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+													   				
+								   								</ul>
+									   						</nav>
+								   						</a>									   					
+								   					</li>
 								   				</ul>
 							   				</nav>
 						   				</div>
+						   				
 									</div>
 								</td>
 							</tr>
