Youtube in Third layer CSS and HTML totally done

--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -43,21 +43,15 @@
 				
 				<div id="sec3" style="background:red;" class="article" align="center">
 					<div class="ctn">
-					<!-- Playerlist id 
-	
-					 
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/F3U9WogSVsQ?ecver=1" frameborder="0" allowfullscreen></iframe>
-						Video id -->
 						<table style="background:yellow; width:80%;height:70%; position:relative;margin: 0 auto;">
 							<tr>
 								<td>
 									<div style="width:100%; height:100%;" id="youtubeVideoPool">
-										<iframe width="100%" height="100%" src="https://www.youtube.com/embed/bhzasigpf3Q?list=PL4m8kzZrBUKpWRXE6kCWPhq904-q-R96O?ecver=1" frameborder="0" allowfullscreen></iframe>
+										<iframe id="video" width="100%" height="100%" src="https://www.youtube.com/embed/F3U9WogSVsQ?ecver=1" frameborder="0" allowfullscreen></iframe>
 									</div>
 								</td>
 								<td style="width:25%; height:100%;text-align: left;">
-									<div id="youtubePlayList" style="width:100%; height:100%;">
-										
+									<div id="youtubePlayList" style="width:100%; height:100%;">										
 										<div>	
 											<nav>					    
 												<ul><!--  {% for x in pics %}
@@ -69,7 +63,7 @@
 								        				</a></li>
 								   					{% endfor %}-->
 								   					<li class="yaHome">	
-									   					<a>							   						
+									   					<a alt="GvgqDSnpRQM">							   						
 									   						<nav>
 									   							<ul>													   							
 												   					<li>
@@ -95,205 +89,7 @@
 													   					
 												   					</li>		
 													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
-													   				
-								   								</ul>
-									   						</nav>
-								   						</a>									   					
-								   					</li>
-								   					<li class="yaHome">	
-									   					<a>							   						
-									   						<nav>
-									   							<ul>													   							
-												   					<li>
-													   					<div class="tablewrapper">
-													   						<table style="direction:ltr; float:left;">
-																				<tr>
-																					<td>
-																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
-																					</td>
-																							
-																					<td>
-																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
-																							<ul>																								
-																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
-																							</ul>
-																						</nav>
-																					</td>
-																						
-																				</tr>
-																			</table>
-																																	
-																		</div>										   					
-													   					
-												   					</li>		
-													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
-													   				
-								   								</ul>
-									   						</nav>
-								   						</a>									   					
-								   					</li>
-								   					<li class="yaHome">	
-									   					<a>							   						
-									   						<nav>
-									   							<ul>													   							
-												   					<li>
-													   					<div class="tablewrapper">
-													   						<table style="direction:ltr; float:left;">
-																				<tr>
-																					<td>
-																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
-																					</td>
-																							
-																					<td>
-																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
-																							<ul>																								
-																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
-																							</ul>
-																						</nav>
-																					</td>
-																						
-																				</tr>
-																			</table>
-																																	
-																		</div>										   					
-													   					
-												   					</li>		
-													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
-													   				
-								   								</ul>
-									   						</nav>
-								   						</a>									   					
-								   					</li>
-								   					<li class="yaHome">	
-									   					<a>							   						
-									   						<nav>
-									   							<ul>													   							
-												   					<li>
-													   					<div class="tablewrapper">
-													   						<table style="direction:ltr; float:left;">
-																				<tr>
-																					<td>
-																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
-																					</td>
-																							
-																					<td>
-																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
-																							<ul>																								
-																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
-																							</ul>
-																						</nav>
-																					</td>
-																						
-																				</tr>
-																			</table>
-																																	
-																		</div>										   					
-													   					
-												   					</li>		
-													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
-													   				
-								   								</ul>
-									   						</nav>
-								   						</a>									   					
-								   					</li>
-								   					<li class="yaHome">	
-									   					<a>							   						
-									   						<nav>
-									   							<ul>													   							
-												   					<li>
-													   					<div class="tablewrapper">
-													   						<table style="direction:ltr; float:left;">
-																				<tr>
-																					<td>
-																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
-																					</td>
-																							
-																					<td>
-																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
-																							<ul>																								
-																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
-																							</ul>
-																						</nav>
-																					</td>
-																						
-																				</tr>
-																			</table>
-																																	
-																		</div>										   					
-													   					
-												   					</li>		
-													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
-													   				
-								   								</ul>
-									   						</nav>
-								   						</a>									   					
-								   					</li>
-								   					<li class="yaHome">	
-									   					<a>							   						
-									   						<nav>
-									   							<ul>													   							
-												   					<li>
-													   					<div class="tablewrapper">
-													   						<table style="direction:ltr; float:left;">
-																				<tr>
-																					<td>
-																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
-																					</td>
-																							
-																					<td>
-																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
-																							<ul>																								
-																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
-																							</ul>
-																						</nav>
-																					</td>
-																						
-																				</tr>
-																			</table>
-																																	
-																		</div>										   					
-													   					
-												   					</li>		
-													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
-													   				
-								   								</ul>
-									   						</nav>
-								   						</a>									   					
-								   					</li>
-								   					<li class="yaHome">	
-									   					<a>							   						
-									   						<nav>
-									   							<ul>													   							
-												   					<li>
-													   					<div class="tablewrapper">
-													   						<table style="direction:ltr; float:left;">
-																				<tr>
-																					<td>
-																						<img style="width:auto; height:50px;" src="/static/media/{{ HomeLogo }}">
-																					</td>
-																							
-																					<td>
-																						<nav style="position:relative; padding-left:10px; margin-right:10px;">
-																							<ul>																								
-																								<li style="padding:0; margin:0;"><span style="font-weight:bold; font-size:18px;line-height:0;">a b c d e f g sdls s s s s s s ss s s s</span></li>																						
-																							</ul>
-																						</nav>
-																					</td>
-																						
-																				</tr>
-																			</table>
-																																	
-																		</div>										   					
-													   					
-												   					</li>		
-													   					
-												   					<li style="margin-top:10px;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
+												   					<li style="margin-top:10px;height:50px; overflow:hidden;"><span>Andrew Willis built a skatepark in East London using reclaimed materials left over from the Olympic Games, creating a lasting legacy for the local community of Hackney Wick.</span></li>  			
 													   				
 								   								</ul>
 									   						</nav>
