--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -46,12 +46,12 @@
 						<table style="background:yellow; width:80%;height:70%; position:relative;margin: 0 auto;">
 							<tr>
 								<td>
-									<div style="width:100%; height:100%;" id="youtubeVideoPool">
+									<div style="width:100%; height:100%;background:black;position:relative;" id="youtubeVideoPool">
 										<iframe id="video" width="100%" height="100%" src="https://www.youtube.com/embed/F3U9WogSVsQ?ecver=1" frameborder="0" allowfullscreen></iframe>
 									</div>
 								</td>
 								<td style="width:25%; height:100%;text-align: left;">
-									<div id="youtubePlayList" style="width:100%; height:100%;">										
+									<div id="youtubePlayList" class="HomeYoutube" style="width:100%; height:100%;">										
 										<div>	
 											<nav>					    
 												<ul><!--  {% for x in pics %}
