--- a/templates/sites/footer.html
+++ b/templates/sites/footer.html
@@ -2,46 +2,53 @@
 	    <div id="Footer" align="center" style="position:fixed;bottom:0px; width:100%;">
 			 
 		    <div class="footerUp">
-				<footer>
-				    <p>&copy;{{ year }} Junhao "Freddie" Zhang, all the rights reserved</p>
+				<footer>				    
+				    <table style="background:yellow; width:80%;height:70vh; position:relative;margin: 0 auto; padding-top:5vh;">
+							<tr>
+								<td>
+									<div style="width:100%; height:100%;background:black;position:relative;" id="footerYoutubeVideoPool">
+										<iframe id="footerMusic" width="100%" height="100%" src="https://www.youtube.com/embed/F3U9WogSVsQ?ecver=1" frameborder="0"></iframe>
+									</div>
+								</td>
+								<td style="height:100%;text-align: left;width:30%;">
+									<div id="footerPlayList" class="HomeYoutube" style="width:100%; height:100%;" align=center>										
+										<div style="width:100%; height:100%;">	
+											<nav style="width:100%; height:100%;">					    
+												<ul style="width:100%; height:100%;"><!--  {% for x in pics %}
+								        				<li><a alt="{{ x.Album_Url }}">
+			
+								        				<img style="width:88%; height:auto; " src="/static/media/{{ x.Photo_Album_Cover }}">
+								        				<p style="color:white;font-size:24px;text-decoration:none;">{{ x.name }}</p>
+								        				
+								        				</a></li>
+								   					{% endfor %}-->
+								   					<li class="yaFooter">	
+									   					<a alt="GvgqDSnpRQM">
+												   			<span style="font-weight:bold; font-size:35px;line-height:40px;">a b c d e f g sdls s s s s s s ss s s s</span>																																		   					
+								   						</a>									   					
+								   					</li>
+
+								   					<li class="yaFooter">	
+									   					<a alt="GvgqDSnpRQM">
+												   			<span style="font-weight:bold; font-size:35px;line-height:40px;">a bs s s s s s ss s s s</span>																																		   					
+								   						</a>									   					
+								   					</li>
+								   				</ul>
+							   				</nav>
+						   				</div>
+						   				
+									</div>
+								</td>
+							</tr>
+						</table>
+						
+			<p>&copy;{{ year }} Junhao "Freddie" Zhang, all the rights reserved</p>
 				    
-				    <!-- ---------------------------------------------------------- -->
-				        <!-- div id="player"></div-->
 
-    <script src="http://www.youtube.com/player_api"></script>
-
-    <script>
-
-        // create youtube player
-        var player;
-        function onYouTubePlayerAPIReady() {
-            player = new YT.Player('player', {
-              height: '390',
-              width: '640',
-              videoId: '0Bmhjf0rKe8',
-              events: {
-                onReady: onPlayerReady,
-                onStateChange: onPlayerStateChange
-              }
-            });
-        }
-
-        // autoplay video
-        function onPlayerReady(event) {
-            event.target.playVideo();
-        }
-
-        // when video ends
-        function onPlayerStateChange(event) {        
-            if(event.data === 0) {          
-                alert('done');
-            }
-        }
-
-    </script>
-    
-    				    <!-- ---------------------------------------------------------- -->
-				</footer>
-		    </div>
+ 			<script type="text/javascript" src="/static/Page/js/footerYoutube.js"></script>   
+			
+			</footer>
 		</div>
+	</div>
+	
 {% endblock %}
