Youtube in Footer(Music) Done, and can continuously play video in the list

--- a/templates/sites/footer.html
+++ b/templates/sites/footer.html
@@ -6,9 +6,7 @@
 				    <table style="background:yellow; width:80%;height:70vh; position:relative;margin: 0 auto; padding-top:5vh;">
 							<tr>
 								<td>
-									<div style="width:100%; height:100%;background:black;position:relative;" id="footerYoutubeVideoPool">
-										<iframe id="footerMusic" width="100%" height="100%" src="https://www.youtube.com/embed/F3U9WogSVsQ?ecver=1" frameborder="0"></iframe>
-									</div>
+									<div style="width:100%; height:100%;background:black;position:relative;" id="player"/>
 								</td>
 								<td style="height:100%;text-align: left;width:30%;">
 									<div id="footerPlayList" class="HomeYoutube" style="width:100%; height:100%;" align=center>										
@@ -43,8 +41,8 @@
 						</table>
 						
 			<p>&copy;{{ year }} Junhao "Freddie" Zhang, all the rights reserved</p>
-				    
-
+			
+			<script src="http://www.youtube.com/player_api"></script>
  			<script type="text/javascript" src="/static/Page/js/footerYoutube.js"></script>   
 			
 			</footer>
