--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -17,18 +17,18 @@
 												<li><a><img style="width:25vh; height:25vh;" src="/static/media/{{ HomeLogo }}""></a></li>	
 												<li><a><span style="font-size:60px">{{ theName }} </span></a></li>	
 												<li><a><span style="font-size:40px">{{ theTitle }}</span></a></li>
-									
-												<nav class="Horizontalnav"> <!-- Horizontal -->
+									<!-- 
+												<nav class="Horizontalnav">
 													<ul>
 														<li><a href="#" alt="#"><img src="/static/media/{{ HomeLogo }}"></a></li>															
 													</ul>
 												</nav>
 										
 												<li><a><span>&uarr; Find out how</span></a></li>	
-												<li><a><span>Contact me</span></a></li>																
+												<li><a><span>Contact me</span></a></li>
+									-->																
 											</ul>
 										</nav>
-									
 									</div>
 								</td>
 								<td>
@@ -85,9 +85,9 @@
 																		</div>										   					
 													   					
 												   					</li>		
-													   					
-												   					<li style="margin-top:10px;height:50px; overflow:hidden;"><span>{{ x.desrip }}</span></li>  			
-													   				
+																	
+																	<li class="Describ"><span>{{ x.desrip }}</span></li>
+																									
 								   								</ul>
 									   						</nav>
 								   						</a>									   					
