--- a/templates/sites/footer.html
+++ b/templates/sites/footer.html
@@ -10,23 +10,19 @@
 								</td>
 								<td style="height:100%;text-align: left;width:30%;">
 									<div id="footerPlayList" class="HomeYoutube" style="width:100%; height:100%;" align=center>										
-										<div style="width:100%; height:100%;">	
-											<nav style="width:100%; height:100%;">					    
-												<ul style="width:100%; height:100%;"><!--  {% for x in pics %}
-								        				<li><a alt="{{ x.Album_Url }}">
-			
-								        				<img style="width:88%; height:auto; " src="/static/media/{{ x.Photo_Album_Cover }}">
-								        				<p style="color:white;font-size:24px;text-decoration:none;">{{ x.name }}</p>
-								        				
-								        				</a></li>
-								   					{% endfor %}-->
-								   					<li class="yaFooter">	
-									   					<a alt="GvgqDSnpRQM">
-												   			<span style="font-weight:bold; font-size:35px;line-height:40px;">a b c d e f g sdls s s s s s s ss s s s</span>																																		   					
+										<div>	
+											<nav>					    
+												<ul>
+												{% for x in music %}
+							   					
+								   					<li class="yaFooter" style="height:auto;">	
+									   					<a alt="{{ x.vid }}">
+												   			<span style="font-weight:bold; font-size:35px;">{{ x.title }}</span>																																		   					
 								   						</a>									   					
 								   					</li>
 
-
+												{% endfor %}
+												
 								   				</ul>
 							   				</nav>
 						   				</div>
