Home background removed

--- a/static/Page/css/mystyle.css
+++ b/static/Page/css/mystyle.css
@@ -264,6 +264,11 @@ footer {
 	overflow:hidden;
 }
 
+#map {
+	width:100vh; 
+	height:70vh;
+}
+
 header, section, aside, figure {
 	display: block;
 }
