--- a/templates/sites/footer.html
+++ b/templates/sites/footer.html
@@ -3,7 +3,7 @@
 			 
 		    <div class="footerUp">
 				<footer>				    
-				    <table style="background:yellow; width:80%;height:70vh; position:relative;margin: 0 auto; padding-top:5vh;">
+				    <table style="width:80%;height:70vh; position:relative;margin: 0 auto; padding-top:5vh;">
 							<tr>
 								<td>
 									<div style="width:100%; height:100%;background:black;position:relative;" id="player"/>
