--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -14,9 +14,9 @@
 									<div class="ContactIcons" align=center style="position:relative;">
 										<nav> <!-- Vertical -->
 											<ul>
-												<li><a><img style="width:25vh; height:25vh;" src="/static/media/{{ HomeLogo }}""></a></li>	
-												<li><a><span style="font-size:60px">{{ theName }} </span></a></li>	
-												<li><a><span style="font-size:40px">{{ theTitle }}</span></a></li>
+												<li><a><img style="width:auto; height:25vh;" src="/static/media/{{ Pic }}""></a></li>	
+												<li><a><span style="font-size:60px;color:white;font-weight:bold;">{{ theName }} </span></a></li>	
+												<li><a><span style="font-size:40px;color:white;font-weight:bold;">{{ theTitle }}</span></a></li>
 									<!-- 
 												<nav class="Horizontalnav">
 													<ul>
