--- a/templates/chmod755+/home.html
+++ b/templates/chmod755+/home.html
@@ -125,13 +125,13 @@
 				</div>
 				
 				<a href="#" id="back-to-top-Home" style="position:fixed;left: 20px;bottom: 60px; padding: 0; text-align: center;">
-					<div style="margin-top: 20px; padding:10px 80px 10px 80px; background: orange; position:relative; float:right; border-style: solid;	border-color: gray;" align=center>
+					<div style="margin-top: 20px; padding:10px 80px 10px 80px; background: gray; position:relative; float:right; border-style: solid;	border-color: gray;" align=center>
 						<span style="font-size:24px;color:white;">&uarr; Up</span>
 					</div>
 				</a>
 				
 				<a href="#" id="back-to-bot-Home" style="position:fixed;right: 20px;bottom: 60px; padding: 0; text-align: center;">
-					<div style="margin-top: 20px; padding:10px 80px 10px 80px; background: green; position:relative; float:left; border-style: solid;border-color: gray;" align=center>
+					<div style="margin-top: 20px; padding:10px 80px 10px 80px; background: #2A2A2A; position:relative; float:left; border-style: solid;border-color: gray;" align=center>
 						<span style="font-size:24px;color:white;">&darr; Down</span>
 					</div>
 				</a>
