--- a/templates/sites/header.html
+++ b/templates/sites/header.html
@@ -22,8 +22,8 @@
 			  		<nav>
 				    		<ul>
 					      		<li><a href="#Home" alt="home.html">Home</a></li>
-					      		<li><a href="#About" alt="About.html">About</a></li>
-					      		<!-- <li><a href="#Projects" alt="Projects.html">Projects</a></li> -->
+					      		<!-- <li><a href="#About" alt="About.html">About</a></li>
+					      		<li><a href="#Projects" alt="Projects.html">Projects</a></li> -->
 					      		<li><a href="#PhotoAlbums" alt="PhotoAlbums.html">Photo Albums</a></li>
 					      		<!-- <li><a href="#Comment" alt="Comment.html">Leave Comments</a></li> -->
 				    		</ul>
