--- a/static/Page/css/mystyle.css
+++ b/static/Page/css/mystyle.css
@@ -230,6 +230,25 @@ DIV.tablewrapper {
 	float:right;
 	/*margin:10px 0px 0px 0px;*/
 	left:18%;	
+	z-index = -1;
+}
+
+#dispCheck div ul li p { 
+	color:white; 
+	font-weight:bold; 
+	font-size:100px;
+	padding:0px; 
+	margin:0px; 
+}
+
+#dispCheck{
+	width:82%;
+	height:20vh;
+	position:absolute;
+	float:right;
+	bottom:0;
+	left:18%;	
+	z-index = 0;
 }
 
 #back-to-top h2{
@@ -240,11 +259,11 @@ DIV.tablewrapper {
 }
 
 footer {
-		padding:5px 0px 5px 0px;
-		background:#2A2A2A;
-		color:#FFF;
-		text-align:center;
-		clear: both; 
+	padding:5px 0px 5px 0px;
+	background:#2A2A2A;
+	color:#FFF;
+	text-align:center;
+	clear: both; 
 }
 
 .footerUp footer { max-height: 0; }
@@ -255,12 +274,7 @@ footer {
 	margin-top:10px;
 	overflow:hidden;
 }
-/*
-#map {
-	width:100vh; 
-	height:70vh;
-}
-*/
+
 header, section, aside, figure {
 	display: block;
 }
