--- a/templates/chmod755+/PhotoAlbums.html
+++ b/templates/chmod755+/PhotoAlbums.html
@@ -25,15 +25,27 @@
 					<div id="Spin" style="width:50px;height:50px;padding:0px;"></div>
 					<div style="position:absolute;left:23%;top:30%;paddinig:0px;height:30px;width:30px;z-index:10;"><a id="leftArrow"><img alt="" src="/static/media/{{ lAr }}"></a></div>
 					<div style="position:absolute;right:11%;top:30%;paddinig:0px;height:30px;width:30px;z-index:10;"><a id="righArrow"><img alt="" src="/static/media/{{ rAr }}"></a></div>
-					<div id="dispPic">
+					<div id="dispPic" />
 					
+					<div id="dispCheck">
+						<div style='width:100%; height:auto; background:black; opacity:0.7; padding:0px; margin:0px; position:absolute;bottom:0;' align=center>
+							<ul>
+								<li>
+									<input type='checkbox' id='myCheck' style='width:50px;height:50px;' checked='true'>
+								</li>
+								
+								<li> 
+									<p>Auto Play</p>
+								</li>
+							</ul>
+						</div>
 					</div>
-					
+							
 				</div>
 				
 				<!-- End of Third -->
 			
 			<script src="/static/Page/js/Plugin/spin.js"></script> 
-			<script type="text/javascript" src="/static/Page/js/rollingPics.js"></script> 
+			<script type="text/javascript" src="/static/Page/js/rollingPics.js"></script>
 			
 			
