--- a/templates/chmod755+/PhotoAlbums.html
+++ b/templates/chmod755+/PhotoAlbums.html
@@ -23,8 +23,8 @@
 			   				</div>
 						</div>
 					<div id="Spin" style="width:50px;height:50px;padding:0px;"></div>
-					<div style="position:absolute;left:23%;top:30%;paddinig:0px;height:30px;width:30px;z-index:10;"><a id="leftArrow"><img alt="" src="/static/media/{{ lAr }}"></a></div>
-					<div style="position:absolute;right:11%;top:30%;paddinig:0px;height:30px;width:30px;z-index:10;"><a id="righArrow"><img alt="" src="/static/media/{{ rAr }}"></a></div>
+					<div style="position:absolute;left:23%;top:30%;padding:0px;height:30px;width:30px;z-index:10;"><a id="leftArrow"><img alt="" src="/static/media/{{ lAr }}"></a></div>
+					<div style="position:absolute;right:11%;top:30%;padding:0px;height:30px;width:30px;z-index:10;"><a id="righArrow"><img alt="" src="/static/media/{{ rAr }}"></a></div>
 					<div id="dispPic" />
 					
 					<div id="dispCheck">
